dht_errors_2.txt
cargo : warning: 
unused import: 
`ZeroKeypairPublic`
At line:1 char:1
+ cargo check -p 
zero-dht --offline 
2>&1 | Out-File 
-FilePath dht_error ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (warning: unus   
 ed...oKeypairPubli    
c`:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
 --> zero-identity\src\
bundle.rs:5:28
  |
5 | ...r, 
ZeroKeypairPublic},
  |       
^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: `zero_crypto::k
em::MlKem768EncapsKey`
  --> zero-identity\src
\bundle.rs:10:5
   |
10 | use zero_crypto::k
em::MlKem768EncapsKey;
   |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`Ed25519SecretKey`, 
`MlKem768DecapsKey`, 
and `X25519SecretKey`
  --> zero-identity\src
\keypair.rs:10:42
   |
10 | 
...:{X25519Keypair, 
X25519PublicKey, 
X25519SecretKey},
   |                   
                   
^^^^^^^^^^^^^^^
11 | ...h::blake2b_256,
12 | ...::{MlKem768Deca
psKey, 
MlKem768EncapsKey, 
MlKem768Keypair},
   |       
^^^^^^^^^^^^^^^^^
13 | 
...n::{Ed25519Keypair, 
Ed25519PublicKey, 
Ed25519SecretKey},
   |                   
                       
^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`ZeroizeOnDrop` and 
`Zeroize`
  --> zero-identity\src
\keypair.rs:16:15
   |
16 | ...::{Zeroize, 
ZeroizeOnDrop};
   |       ^^^^^^^  
^^^^^^^^^^^^^

warning: 
`zero-identity` (lib) 
generated 4 warnings 
(run `cargo fix --lib 
-p zero-identity` to 
apply 4 suggestions)
    Checking zero-dht 
v1.0.0 (C:\Users\Revant
h\Downloads\ZERO\zero-d
ht)
warning: unused 
import: `xor_distance`
 --> zero-dht\src\kbuck
et.rs:3:13
  |
3 | use 
crate::{xor_distance, 
NodeId};
  |             
^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: `ed25519_sign`
  --> zero-dht\src\node
_record.rs:12:46
   |
12 |     
sign::{Ed25519Keypair, 
Ed25519Signature, 
ed25519_sign, 
ed25519_verify, 
Ed25519PublicKey},
   |                   
                       
    ^^^^^^^^^^^^

warning: unused 
import: `K_BUCKET_SIZE`
 --> zero-dht\src\routi
ng_table.rs:4:34
  |
4 |     
kbucket::{KBucket, 
NodeInfo, 
K_BUCKET_SIZE},
  |                    
              
^^^^^^^^^^^^^

error[E0433]: failed 
to resolve: use of 
unresolved module or 
unlinked crate `hex`
  --> zero-dht\src\lib.
rs:61:33
   |
61 |         write!(f, 
"NodeId({})", 
hex::encode(self.0))
   |                   
              ^^^ use 
of unresolved module 
or unlinked crate `hex`
   |
   = help: if you 
wanted to use a crate 
named `hex`, use 
`cargo add hex` to add 
it to your `Cargo.toml`

For more information 
about this error, try 
`rustc --explain 
E0433`.
warning: `zero-dht` 
(lib) generated 3 
warnings
error: could not 
compile `zero-dht` 
(lib) due to 1 
previous error; 3 
warnings emitted
